fixed resizing issues and whitespace

--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -21,4 +21,7 @@
 
 *{
     scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
